--- a/new css/style.css
+++ b/new css/style.css
@@ -34,3 +34,53 @@ h1 {
     font-size: 40px;
     padding: 20px 0;
 }
+
+/* REGOLE MAIN */
+
+main {
+    display: flex;
+    justify-content: center;
+    background-color: #f6f5f3;
+}
+
+.container {
+    padding: 15px;
+}
+
+/* section ricetta */
+
+.ricetta {
+    width: 100%;
+}
+
+h2 {
+    color: #4e3969;
+    padding: 20px 0;
+}
+
+h4 {
+    font-weight: bold;
+    padding-bottom: 20px;
+}
+
+h5 {
+    color: #a599a1;
+    padding-top: 10px;
+}
+
+.plus {
+    display: none;
+}
+
+.col-info {
+    background-color: white;
+    padding: 20px;
+}
+
+.info-cont div {
+    padding: 10px 0;
+}
+
+.info-cont span {
+    font-weight: bold;
+}
