--- a/new css/style.css
+++ b/new css/style.css
@@ -84,3 +84,79 @@ h5 {
 .info-cont span {
     font-weight: bold;
 }
+
+/* section ricetta */
+
+.ricetta {
+    width: 100%;
+}
+
+h2 {
+    color: #4e3969;
+    padding: 20px 0;
+}
+
+h4 {
+    font-weight: bold;
+    padding-bottom: 20px;
+}
+
+h5 {
+    color: #a599a1;
+    padding-top: 10px;
+}
+
+.plus {
+    display: none;
+}
+
+.col-info {
+    background-color: white;
+    padding: 20px;
+}
+
+.info-cont div {
+    padding: 10px 0;
+}
+
+.info-cont span {
+    font-weight: bold;
+}
+
+/* sezione social */
+
+.socials {
+    display: flex;
+    justify-content: space-between;
+    margin: 20px 0;
+}
+
+.socials span {
+    display: none;
+}
+
+.social {
+    padding: 15px;
+    background-color: white;
+    border-radius: 20px;
+}
+
+#fb {
+    color: #1a77f3;
+}
+
+#tw {
+    color: #009eff;
+}
+
+#inst {
+    color: #df4c83;
+}
+
+#pint {
+    color: #e62222;
+}
+
+#yout {
+    color: #e62222;
+}
