[UPD] create footer

--- a/new css/style.css
+++ b/new css/style.css
@@ -188,3 +188,39 @@ h3 {
 .presentation p {
     line-height: 1.5;
 }
+
+/* FOOTER */
+
+footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #7c69a4;
+    color: white;
+}
+
+.foot-cont {
+    width: 75%;
+    padding: 20px 0;
+}
+
+.col footer,
+.col-nav footer {
+    width: 40%;
+}
+
+.col div {
+    text-align: center;
+    margin: 10px 0;
+}
+
+.col-nav ul {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+ul li {
+    width: 22%;
+    padding: 15px 0;
+}
