--- a/new css/style.css
+++ b/new css/style.css
@@ -85,44 +85,6 @@ h5 {
     font-weight: bold;
 }
 
-/* section ricetta */
-
-.ricetta {
-    width: 100%;
-}
-
-h2 {
-    color: #4e3969;
-    padding: 20px 0;
-}
-
-h4 {
-    font-weight: bold;
-    padding-bottom: 20px;
-}
-
-h5 {
-    color: #a599a1;
-    padding-top: 10px;
-}
-
-.plus {
-    display: none;
-}
-
-.col-info {
-    background-color: white;
-    padding: 20px;
-}
-
-.info-cont div {
-    padding: 10px 0;
-}
-
-.info-cont span {
-    font-weight: bold;
-}
-
 /* sezione social */
 
 .socials {
@@ -223,4 +185,86 @@ footer {
 ul li {
     width: 22%;
     padding: 15px 0;
+}
+
+/*************************************************
+    VERSIONE TABLET (sopra i 768px)
+ *************************************************/
+
+ @media screen and (min-width:768px) {
+
+    /* HEADER */
+
+    h1 {
+        padding-left: 10px;
+        text-align: left;
+    }
+
+    /* REGOLE MAIN */
+
+    /* section ricetta */
+
+    h2 {
+        font-size: 2rem;
+        padding: 1.5rem 0;
+    }
+
+    h5 {
+        padding: 1.5rem 0;
+    }
+
+    .plus {
+        display: inline;
+    }
+
+    .col-img img {
+        width: 100%; 
+        /* height: auto; 
+        display: block; */
+    }
+
+    .info-cont {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 0 10px;
+        padding: 1.5rem 0;
+    }
+
+    .info-cont div {
+        width: 32%;
+    }
+
+    /* sezione social */
+
+    .social {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 140px;
+        height: 50px;
+    }
+
+    /* sezione presentazione */
+
+    h3 {
+        padding: 1.5rem 0;
+    }
+
+    .presentation img {
+        width: 50%;
+        margin: 0;
+    }
+
+    .presentation p img {
+        float: left;
+        margin-right: 10px;
+    }
+
+    .clearfix::after {
+        display: table;
+        content: "";
+        clear: both;
+
+    }
+
 }
