--- a/new css/style.css
+++ b/new css/style.css
@@ -268,3 +268,75 @@ ul li {
     }
 
 }
+
+/*************************************************
+    VERSIONE DESKTOP (sopra i 992px)
+  *************************************************/
+
+  @media screen and (min-width:992px) {
+
+    /* REGOLE MAIN */
+
+    .container {
+        width: 80%;
+    }
+
+    /* section ricetta */
+
+    h2 {
+        font-size: 2.5rem;
+    }
+
+    .ricetta .row {
+        display: flex;
+        justify-content: space-between;
+        align-items: stretch;
+    }
+
+    .col-img {
+        width: 70%;
+    }
+
+    .col-info {
+        width: 30%;
+    }
+
+    .info-cont {
+        display: block;
+    }
+
+    .info-cont div {
+        width: 100%;
+    }
+
+    /* sezione social */
+
+    .socials span {
+        display: inline;
+    }
+
+    /* FOOTER */
+
+    .foot-cont {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .col div {
+        text-align: left;
+        margin: 10px 0;
+    }
+
+    .foot-cont {
+        width: 100%;
+        padding: 20px 10px;
+    }
+
+    .col-nav ul {
+        display: flex;
+        justify-content: center;
+        flex-wrap: nowrap;
+    }
+
+}
